# A.L.T.A.I.R

./: DOCUMENTS.md  GEMINI.md  PLAN.md  TASK04PLAN.md
backend/: .env.example  .gitignore  latest_received_command.m4a  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  context_resolver.py  coordinator.py  executor.py  memory_manager.py  planner.py  planner_schema.py  safety.py  watcher_builder.py  watcher_dsl.py  watcher_engine.py  watcher_scheduler.py
backend/app/ai/: coordinator.py
backend/app/ai/executor/: executor.py
backend/app/ai/planner/: planner.py  planner_schema.py
backend/app/ai/reasoning/: context_resolver.py
backend/app/ai/safety/: safety.py
backend/app/auth/: __init__.py  google_oauth.py  router.py
backend/app/capabilities/documents/: __init__.py  (+7 more)
backend/app/config/: settings.py
backend/app/connectors/: calendar_event_source.py  event_source.py  gmail_event_source.py
backend/app/database/: __init__.py  db_client.py  token_manager.py  watcher_store.py
backend/app/repositories/: db_client.py  document_repository.py  watcher_repository.py
backend/app/scratch/: test_context.py  test_dag.py  test_document_integrations.py  test_documents.py  test_email_attachments.py  test_safety.py  test_search.py  test_watchers_domain.py  test_watchers_engine.py
backend/app/services/: notification_service.py
backend/app/tools/: __init__.py  calendar_tools.py  email_tools.py  search_tools.py
backend/app/watchers/: builder.py  dsl.py  engine.py  event_source.py  models.py  scheduler.py
(+60 files in other folders)
