[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.111.0",
    "google-genai>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    # Milestone 3 — Google Workspace & Supabase
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "supabase>=2.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "filetype>=1.2.0",
]
